# cloak

./: .gitignore  README.md
docs/source/: conf.py  index.rst
docs/source/assets/css/: documentation.css  torcloak.css
docs/source/documentation/: documentation.rst
docs/source/guide/: guide.rst
docs/source/specification/: architecture.rst  broker.rst  design_goals.rst  introduction.rst  pt_spec.rst  socks_proto.rst  system_features.rst  threat_model.rst
machine_setup/: Vagrantfile  compile_chromium.py
scripts/: automate.py  bridge.py  client.py
src/broker/: broker.py
src/broker/lib/: bridges.pickle  bridges.txt  crypto.py  database.py  gen_bridge_data.py  queries.py
src/client/: CMakeLists.txt  cloak.cpp
src/client/common/: Common.cpp  Common.hpp  FdPair.hpp  cmdline.h  utils.cpp
src/client/controller/: ClientController.cpp  ClientController.hpp  ServerController.cpp  ServerController.hpp
src/client/modes/socks5/: SocksProxyClient.cpp  SocksProxyClient.hpp  SocksProxyServer.cpp  SocksProxyServer.hpp
src/client/torptspec/: TorPT.cpp  TorPT.hpp  TorPTClient.cpp  TorPTClient.hpp  TorPTServer.cpp  TorPTServer.hpp
src/client/transport/: DecodingThread.cpp  DecodingThread.h  EncodingThread.cpp  EncodingThread.h  FragmentManager.cpp  FragmentManager.h  Transport.cpp  Transport.h
src/client/transport/chromium_patches/api/video/: encoded_image.h
src/client/transport/chromium_patches/call/: call.cc  call.h  rtp_video_sender.cc  rtp_video_sender.h
src/client/transport/chromium_patches/media/: BUILD.gn
src/client/transport/chromium_patches/modules/pacing/: pacing_controller.cc  pacing_controller.h
src/client/transport/chromium_patches/modules/video_coding/: encoded_frame.h  frame_buffer2.cc  frame_buffer2.h
src/client/transport/chromium_patches/video/: rtp_video_stream_receiver2.cc  rtp_video_stream_receiver2.h  video_receive_stream2.cc  video_receive_stream2.h  video_stream_encoder.cc  video_stream_encoder.h
src/client/transport/hooks/: BUILD.gn  debug.h  hooks.cpp  hooks.h  patch.sh
src/client/transport/hooks/macros/: macros_regular.h  macros_replacement.h
src/client/transport/hooks/recorded_frames/: recorded_frames.h  recorded_frames_vp9.h
tor_confs/: torrc_bridge_direct  torrc_bridge_managed  torrc_client_direct  torrc_client_managed
