config("hooks_config") {
  defines = []
}

source_set("hooks") {
  sources = [
    "hooks.cpp",
  ]

# For all (directly) importing files getting the define
  public_configs = [
    ":hooks_config"
  ]

# For all (directly and transitively) importing files getting the define
# Beware of a lot of code dependencies
#  all_dependent_configs = [
#    ":hooks_config"
}